# CSSE4011-Uranus-Crimson

./: AddsGestureToHenrysSubparCode.c  Henry'sCFileWithGestures.c  ROSOutlineCode.py  execute_launch.py  getpos.py  getpos_scan.py
Project Information Files/: CSSE4011_Project_Configurability_And_Deployment_Plan_Uranus_Crimson.docx  CSSE4011_Project_Configurability_And_Deployment_Plan_Uranus_Crimson_.docx  CSSE4011_Project_Field_Deployment_Manual_Gestures.docx  CSSE4011_Project_Field_Deployment_Manual_Wiring.docx  CSSE4011_Project_KPI_Conclusions_Uranus_Crimson.docx  CSSE4011_Project_Poster_Uranus_Crimson.pptx  CSSE4011_Project_Poster_Uranus_Crimson_2405191004.pptx  CSSE4011_Project_Poster_Uranus_Crimson_2405195615.pptx  Poster.pptx  Project Configurability and Field Deployment Plan (1).docx  Project Configurability and Field Deployment Plan.docx
m5core code/: M5Core-ROS.ino  csse4011_project.ino
mycode/apps/FP/: CMakeLists.txt  prj.conf
mycode/apps/FP/boards/: nucleo_l496zg.overlay
mycode/apps/FP/src/: main.c
mycode/include/: s4702018_LED.h  s4702018_PB.h  s4702018_UART.h
mycode/mylib/: CMakeLists.txt  s4702018_LED.c  s4702018_PB.c  s4702018_UART.c
python_processing/: Kalmin.py  ROS_Move_Node.py  ROS_Pos_Node.py  execute_launch.py  launch_slam_toolbox.py  main.py  map_baselink.py  mqtt.py  packet.py  uart.py  util.py
python_processing/launch/: 4011_launch.py
